--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+        <link rel="icon" href="css/hourglass.png">
 </head>
 <body>
     <H1>Work Timer</H1>
